--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.mvc.view.prefix = /WEB-INF/jsp/
 spring.mvc.view.suffix = .jsp
 
-spring.datasource.url=jdbc:mysql://localhost:3306/customer_relationship
+spring.datasource.url=jdbc:mysql://localhost:3306/CustomerRelationship
 spring.datasource.username=root
-spring.datasource.password=Rathore@123  
-spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+spring.datasource.password=Rathore@123
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto=update
+
+logging.level.org.springframework.web: DEBUG
+logging.level.org.hibernate: ERROR
